Style fixes for the website before 0.5 release (#320)
Fixes #307 and #285

Fixes some layout problems with the navbar (it was collapsing on smaller screens, 
like notebooks). 
Remove the cookbook link from the navbar because we're favoring the gallery. 
Include a link on the navbar to the API docs directly. 
Remove the github link. 
Some style changes to the homepage.

--- a/doc/_static/style.css
+++ b/doc/_static/style.css
@@ -14,12 +14,12 @@ h2 {
     border-radius: 0px;
 }
 .navbar-brand  img {
-    height: 40px;
+    height: 30px;
     margin: 0px 10px;
 }
 .navbar-brand {
-    padding-top: 10px;
-    font-size: 20pt;
+    padding-top: 16px;
+    font-size: 16pt;
 }
 blockquote {
     font-size: 12pt;
